@@ -70,6 +70,12 @@ buildRelease=true
 kotlin.code.style=official
 asfNexusUsername=none
 asfNexusPassword=
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=1g \
+  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 """
   }
 }
